--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "animate.css": "^4.1.1",
+    "bad-words": "^3.0.4",
+    "date-fns": "^2.29.3",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
