--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "wheres-waldo-app",
+  "homepage": "https://tagtart1.github.io/wheres-waldo-app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +15,7 @@
     "bad-words": "^3.0.4",
     "date-fns": "^2.29.3",
     "firebase": "^9.15.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-notifications-component": "^4.0.1",
@@ -26,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
